--- a/AZVMTest01/Pages/Index.cshtml
+++ b/AZVMTest01/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">List of Produts</h1>
+    <h1 class="display-4">List of Produts using GitHub</h1>
     @*<table class="table table-bordered">
         <thead>
             <tr>
